--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Taschengeld Management</title>
+  <title>Taschengeld</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="icon" type="image/png" href="/images/favicon.png">
   <script src="script.js" defer></script>
 </head>
 <body>
-  <h1>Taschengeld Management</h1>
+  <h1>Taschengeld</h1>
   <form id="search-form">
     <input type="text" id="search-input" placeholder="Kind suchen..." autocomplete="off">
   </form>
@@ -22,6 +23,7 @@
     <table id="transactions">
       <thead>
         <tr>
+          <th>Wochentag</th>
           <th>Datum</th>
           <th>Betrag</th>
         </tr>
