--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <p id="balance"></p>
     <form id="money-form">
       <input type="text" id="money-input" placeholder="Betrag...">
-      <button type="submit">Ein-/Auszahlung</button>
+      <button type="submit" id="deposit-btn">Einzahlung</button>
+      <button type="submit" id="withdraw-btn">Auszahlung</button>
     </form>
     <h3>Buchungen:</h3>
     <table id="transactions">
