mobile version test 1

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h2 id="child-name"></h2>
     <p id="balance"></p>
     <form id="money-form">
-      <input type="text" id="money-input" placeholder="Betrag...">
+      <input type="text" id="money-input" placeholder="Betrag..." autocomplete="off">
       <button type="submit" id="deposit-btn">Einzahlung</button>
       <button type="submit" id="withdraw-btn">Auszahlung</button>
     </form>
