kind hinzufügen/löschen

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <h1>Taschengeld</h1>
   <form id="search-form">
     <input type="text" id="search-input" placeholder="Kind suchen..." autocomplete="off">
+    <div id="button-container">
+      <button type="button" id="add-child">Kind hinzufügen</button>
+      <button type="button" id="delete-all">Alle Löschen</button>
+    </div>
   </form>
   <div id="search-results"></div>
   <div id="child-details" hidden>
