--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<script>
+  if (localStorage.getItem("access") !== "granted") {
+    window.location.href = "login.html";
+  }
+</script>
+
 <!DOCTYPE html>
 <html>
 <head>
