--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 </head>
 <body>
   <h1>Taschengeld</h1>
+  <h2 id="total-balance">Gesamtsumme: €0,00</h2>
   <form id="search-form">
     <input type="text" id="search-input" placeholder="Kind suchen..." autocomplete="off">
     <div id="button-container">
